# mcp-first

./: .gitignore  README.md  pyproject.toml
src/: client.py  git-explorer.py
src/client/: client.py
src/git_server/: main.py
src/git_server/prompts/: git-prompt.md
src/model/: models.py
